added data visualizer

--- a/webtunes/webtunesapp/static/css/main_css.css
+++ b/webtunes/webtunesapp/static/css/main_css.css
@@ -16,3 +16,20 @@
 .clear {
     clear: both;
 }
+
+a{
+    color:yellow;
+}
+.bar-wrapper {
+    height: 300px;
+    position: relative;
+}
+.bar {
+    position: relative;
+    bottom: 0;
+    width: 5px;
+    display: inline-block;
+    border: 1px solid red;
+    height: 5px;
+    border-bottom: 3px solid #fff;
+}
