--- a/webtunes/webtunesapp/templates/webtunesapp/play.html
+++ b/webtunes/webtunesapp/templates/webtunesapp/play.html
@@ -7,6 +7,7 @@
     {% load staticfiles %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main_css.css' %}">
     <script src="{% static 'js/jquery.js' %}"></script>
     <script src ="{% static 'js/bootstrap.js'%}"></script>
 
@@ -41,17 +42,26 @@
       <div class="row">
           <div align = "center" style="horiz-align: center; padding-top: 15%;">
               <h1>{{ song.file_name }}</h1>
+              <canvas id='canvas' width="700" height="350"></canvas>
               <br><br>
-              <audio controls preload="metadata" style=" width:300px;">
-                  <source src="/media/{{ song.audio_file }}" type="audio/mpeg">
-	            Your browser does not support the audio element.
-              </audio><br />
+                  <audio source id='audio' src="/media/{{ song.audio_file }}" controls=""></audio>
+              <script src ="{% static 'js/main_js.js'%}"></script>
             </div>
           </div>
     </div>
         {% endfor %}
     {% endblock %}
 </body>
+<script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-46794744-6', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 
 
 </html>
