made it look nice

--- a/webtunes/webtunesapp/templates/webtunesapp/play.html
+++ b/webtunes/webtunesapp/templates/webtunesapp/play.html
@@ -35,7 +35,7 @@
 
 </head>
 
-<body style = "background-color: #D46A6A; overflow-y: scroll;">
+<body style = " background-image:url('{% static 'pictures/background.jpg' %}'); overflow-y: scroll;">
     {% block content %}
     {% for song in song_entry %}
     <div class = "container-fluid">
