--- a/webtunes/webtunesapp/templates/webtunesapp/success.html
+++ b/webtunes/webtunesapp/templates/webtunesapp/success.html
@@ -7,6 +7,7 @@
     {% load staticfiles %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main_css.css' %}">
     <script src="{% static 'js/jquery.js' %}"></script>
     <script src ="{% static 'js/bootstrap.js'%}"></script>
 
@@ -34,7 +35,7 @@
 
 </head>
 
-<body style = "background-color: #D46A6A; overflow-y: scroll;">
+<body style = " background-image:url('{% static 'pictures/background.jpg' %}'); overflow-y: scroll;">
     {% block content %}
     <div class = "container-fluid">
       <div class="row">
